deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demoapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-springboot-app
  template:
    metadata:
      labels:
        app: java-springboot-app
    spec:
      containers:
        - name: demoapp2
          image: image-registry.openshift-image-registry.svc:5000/gennaro-syskoplan-dev/demoapp2:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "180Mi"
              cpu: "10m"
---
kind: Service
apiVersion: v1
metadata:
  name: demoapp2-svc
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: java-springboot-app

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demoapp2-route
spec:
  to:
    kind: Service
    name: demoapp2-svc
  port:
    targetPort: http-8081
  tls:
    termination: edge
